--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,46 @@ p {
   text-align: center;
 }
 
+/* Primary Content CSS */
+#primary-content {
+    padding: 60px 0;
+    text-align: center;
+}
+#primary-content article {
+    width: 460px;
+    height: 270px;
+    float: left;
+    background-color: #f5f5f5;
+}
+#primary-content article:first-child {
+    margin-right: 20px;
+}
+
+#primary-content article:last-child {
+    margin-right: 20px;
+}
+
+#primary-content article .overlay {
+    background: rgba(255, 255, 255, .95);
+    height: 230px;
+    width: 190px;
+    padding: 20px;
+}
+article h4 {
+    border-bottom: 1px solid #02b8dd;
+    padding-bottom: 20px;
+}
+.more-link {
+    border: 1px solid #02b8dd;
+    color: #02b8dd;
+    padding: 6px 20px;
+    border-radius: 3px;
+}
+.more-link:hover {
+    background-color: #02b8dd;
+    color: #fff;
+}
+
 
 .quiz-container {
   background-color: #fff;
