After using Beautify to tidy up the layout of the code

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 
-*{
+* {
   /* box-sizing: border-box; */
   background-color: #F5E7DE;
 }
@@ -13,47 +13,6 @@ body {
 p {
   text-align: center;
 }
-
-/* Primary Content CSS */
-#primary-content {
-    padding: 60px 0;
-    text-align: center;
-}
-#primary-content article {
-    width: 460px;
-    height: 270px;
-    float: left;
-    background-color: #f5f5f5;
-}
-#primary-content article:first-child {
-    margin-right: 20px;
-}
-
-#primary-content article:last-child {
-    margin-right: 20px;
-}
-
-#primary-content article .overlay {
-    background: rgba(255, 255, 255, .95);
-    height: 230px;
-    width: 190px;
-    padding: 20px;
-}
-article h4 {
-    border-bottom: 1px solid #02b8dd;
-    padding-bottom: 20px;
-}
-.more-link {
-    border: 1px solid #02b8dd;
-    color: #02b8dd;
-    padding: 6px 20px;
-    border-radius: 3px;
-}
-.more-link:hover {
-    background-color: #02b8dd;
-    color: #fff;
-}
-
 
 .quiz-container {
   background-color: #fff;
@@ -75,7 +34,21 @@ article h4 {
   display: flex;
 }
 
-.nav-bar{
+.column {
+  float: left;
+  width: 33.33%;
+  height: 300px;
+  padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.nav-bar {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -111,14 +84,14 @@ article h4 {
   align-items: center;
 }
 
-.header-heading span{
-    font-size: 56px;
+.header-heading span {
+  font-size: 56px;
 }
 
-.header-heading img{
-width: 70px;
-height: 70px;
-padding-right: 20px;
+.header-heading img {
+  width: 70px;
+  height: 70px;
+  padding-right: 20px;
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
