--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,37 @@ p {
   text-align: center;
 }
 
+.container {
+  position: relative;
+  width: 500px;
+}
+
+.container div {
+  height: 300px;
+}
+
+.column-left {
+  width: 33%;
+  left: 0;
+  background: inherit;
+  position: absolute;
+}
+
+.column-center {
+  width: 33%;
+  background: inherit;
+  margin-right: 0.5%;
+  margin-left: 0.5%;
+  position: absolute;
+}
+
+.column-right {
+  width: 33%;
+  right: 0;
+  position: absolute;
+  background: inherit;
+}
+
 .quiz-container {
   background-color: #fff;
   border-radius: 10px;
@@ -106,3 +137,36 @@ p {
     float: none;
   }
 }
+
+.quiz-container {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 2px rgba(`100, 100, 100, 0.1);
+  width: 600px;
+  overflow: hidden;
+}
+
+.quiz-header {
+  padding: 4rem;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  padding: 1rem;
+  text-align: center;
+  margin: 0;
+}
+
+ul {
+  /*Takes away the bulletpoints in the list*/
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  font-size: 1.2rem;
+  /*Spacing between the options*/
+  margin: 1rem 0;
