--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Font that I use throughout the website */
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 /* General Styling */
 * {
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Inconsolata', monospace;
+  font-family: 'Lato', sans-serif;
   background-color: inherit;
 }
 
@@ -24,6 +24,7 @@ a li {
 
 h1 {
   font-size: 40px;
+  font-weight: bold;
 }
 
 h2 {
@@ -46,8 +47,21 @@ ul li {
 
 /* Intro containers styling */
 .intro-container {
-  text-align: center;
-  margin: : 5%;
+  display: flex;
+  justify-content: flex-start;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  flex-direction: column;
 }
 
 /* Quiz Styling */
@@ -80,6 +94,8 @@ ul li {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 25px;
+  margin-bottom: 15px;
 }
 
 /* Style the header links */
@@ -205,7 +221,7 @@ ul li {
   text-align: center;
 }
 
-.footer p {
+.footer p{
   background-color: #844F39;
   color: #F5E7DE;
 }
