Final files after debugging

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,6 @@
   background-color: #F5E7DE;
 }
 
-.mySlides {
-  display: none
-}
-
 img {
   vertical-align: middle;
 }
@@ -63,6 +59,7 @@ ul li {
   flex-direction: column;
 }
 
+/* Content Styling */
 .content {
   display: flex;
   justify-content: center;
@@ -72,6 +69,7 @@ ul li {
   flex-direction: column;
 }
 
+/* Quiz Styling */
 .quiz-link {
   display: flex;
   justify-content: center;
@@ -80,7 +78,6 @@ ul li {
   margin-right: auto;
 }
 
-/* Quiz Styling */
 .container {
   position: relative;
   width: 500px;
@@ -249,13 +246,6 @@ ul li {
   flex-direction: column;
 }
 
-.quiz-container {
-  border-radius: 10px;
-  box-shadow: 0 0 10px 2px rgba(`100, 100, 100, 0.1);
-  width: 600px;
-  overflow: hidden;
-}
-
 .quiz-header {
   padding: 4rem;
 }
@@ -302,7 +292,16 @@ ul li {
   font-size: 18px;
 }
 
-.triple-container-footer button {}
+/* Styling the link as a button */
+.container-button {
+  font-size: 16px;
+  text-decoration: none;
+  background-color: #a16a54;
+  color: #F5E7DE;
+  padding: 2px 6px 2px 6px;
+  border: 3px solid #a16a54;
+  border-radius: 5px;
+}
 
 .triple-container {
   background-color: #F5E7DE;
@@ -313,6 +312,7 @@ ul li {
   margin-left: 32px;
 }
 
+/* Styling for the disclaimer at the bottom */
 .footer {
   position: fixed;
   left: 0;
